primera subida testing

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <!--BOX ICON WEB-->
   <!--<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>-->
   <link rel="stylesheet" href="./static/css/font-awesome.min.css">
-  <link rel="stylesheet" href="./static/css/style.css">
   <link rel="stylesheet" href="./static/css/elegant-icons.css">
   <link rel="stylesheet" href="./static/css/flaticon.css">
   <link rel="stylesheet" href="./static/css/slicknav.min.css">
+  <link rel="stylesheet" href="./static/css/animacion.css">
+  <link rel="stylesheet" href="./static/css/style.css">
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -211,6 +212,7 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="./static/js/main.js"></script>
     <script src="./static/js/fontawesome.min.js"></script>
+    <script src="../static/js/jquery-3.3.1.min.js"></script>
     <!--<script src="./static/js/jquery.slicknav.js"></script>-->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </footer>
