--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -7,10 +7,11 @@
     <!--BOX ICON WEB-->
     <!--<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>-->
     <link rel="stylesheet" href="../static/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/elegant-icons.css">
     <link rel="stylesheet" href="../static/css/flaticon.css">
     <link rel="stylesheet" href="../static/css/slicknav.min.css">
+    <link rel="stylesheet" href="../static/css/animacion.css">
+    <link rel="stylesheet" href="../static/css/style.css">
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -117,7 +118,7 @@
                     </div>
                 </div>
 
-                <div class="row plans active">
+                <div class="pricing__row plans__month active">
 
                     <div class="plans__cuadro">
                         <div class="precio__item">
@@ -158,6 +159,61 @@
                             <h4>Premiun</h4>
                             <h3>
                                 S/15.90 <span> / month</span>
+                            </h3>
+                            <ul>
+                                <li>Lorem</li>
+                                <li>Lorem</li>
+                                <li>Lorem</li>
+                                <li>Lorem</li>
+                                <li>Lorem</li>
+                            </ul>
+                            <a href="#" class="primary-btn">Choose plan</a>
+                        </div>
+                    </div>
+
+                </div>
+                
+                <div class="pricing__row yearly__plans active">
+
+                    <div class="plans__cuadro">
+                        <div class="precio__item">
+                            <h4>Basic</h4>
+                            <h3>
+                                S/25.90 <span> / month</span>
+                            </h3>
+                            <ul>
+                                <li>Lorem</li>
+                                <li>Lorem</li>
+                                <li>Lorem</li>
+                                <li>Lorem</li>
+                                <li>Lorem</li>
+                            </ul>
+                            <a href="#" class="primary-btn">Choose plan</a>
+                        </div>
+                    </div>
+
+                    <div class="plans__cuadro">
+                        <div class="precio__item">
+                            <h4>Medium</h4>
+                            <h3>
+                                S/39.90 <span> / month</span>
+                            </h3>
+                            <ul>
+                                <li>Lorem</li>
+                                <li>Lorem</li>
+                                <li>Lorem</li>
+                                <li>Lorem</li>
+                                <li>Lorem</li>
+                            </ul>
+                            <a href="#" class="primary-btn">Choose plan</a>
+                        </div>
+                    </div>
+
+                    <div class="plans__cuadro">
+                        <div class="precio__item">
+                            <h4>Premiun</h4>
+                            <h3>
+                                S/45.90 <span> / month</span>
                             </h3>
                             <ul>
                                 <li>Lorem</li>
@@ -225,10 +281,12 @@
         </div>
 
         <!-- JavaScript Bundle with Popper -->
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="../static/js/animacion.js"></script>
         <script src="../static/js/main.js"></script>
         <script src="../static/js/fontawesome.min.js"></script>
         <!--<script src="./static/js/jquery.slicknav.js"></script>-->
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        
     </footer>
     <!--FIN FOOTER-->
 </body>
