--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,10 +8,11 @@
     <!--BOX ICON WEB-->
     <!--<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>-->
     <link rel="stylesheet" href="../static/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/elegant-icons.css">
     <link rel="stylesheet" href="../static/css/flaticon.css">
     <link rel="stylesheet" href="../static/css/slicknav.min.css">
+    <link rel="stylesheet" href="../static/css/animacion.css">
+    <link rel="stylesheet" href="../static/css/style.css">
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
