segunda subida testing

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,6 +7,7 @@
     <!-- <link rel="stylesheet" href="./static/css/bootstrap.css"> -->
     <!--BOX ICON WEB-->
     <!--<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>-->
+    <link rel="stylesheet" href="../static/css/bootstrap.css">
     <link rel="stylesheet" href="../static/css/font-awesome.min.css">
     <link rel="stylesheet" href="../static/css/elegant-icons.css">
     <link rel="stylesheet" href="../static/css/flaticon.css">
