--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -6,6 +6,7 @@
     <!-- <link rel="stylesheet" href="./static/css/bootstrap.css"> -->
     <!--BOX ICON WEB-->
     <!--<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>-->
+    <link rel="stylesheet" href="../static/css/bootstrap.css">
     <link rel="stylesheet" href="../static/css/font-awesome.min.css">
     <link rel="stylesheet" href="../static/css/elegant-icons.css">
     <link rel="stylesheet" href="../static/css/flaticon.css">
@@ -104,7 +105,7 @@
                         </div>
                     </div>
 
-                    <div class="boton__plans">
+                    <div class="col-lg-5 col-md-5">
                         <div class="boton__doble">
                             <label for="month" class="active">
                                 Monthly
@@ -120,7 +121,7 @@
 
                 <div class="pricing__row plans__month active">
 
-                    <div class="plans__cuadro">
+                    <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="precio__item">
                             <h4>Basic</h4>
                             <h3>
@@ -137,7 +138,7 @@
                         </div>
                     </div>
 
-                    <div class="plans__cuadro">
+                    <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="precio__item">
                             <h4>Medium</h4>
                             <h3>
@@ -154,7 +155,7 @@
                         </div>
                     </div>
 
-                    <div class="plans__cuadro">
+                    <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="precio__item">
                             <h4>Premiun</h4>
                             <h3>
@@ -175,7 +176,7 @@
                 
                 <div class="pricing__row yearly__plans active">
 
-                    <div class="plans__cuadro">
+                    <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="precio__item">
                             <h4>Basic</h4>
                             <h3>
@@ -192,7 +193,7 @@
                         </div>
                     </div>
 
-                    <div class="plans__cuadro">
+                    <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="precio__item">
                             <h4>Medium</h4>
                             <h3>
@@ -209,7 +210,7 @@
                         </div>
                     </div>
 
-                    <div class="plans__cuadro">
+                    <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="precio__item">
                             <h4>Premiun</h4>
                             <h3>
