--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -17,6 +17,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="La mejor web para encontrar a tu roomate ideal sin preocupaciones aquí en StudenHome">
+   <meta name="keywords"  content="StudenHome, Student Home, Roomate StudentHome, Roomate Home, Roomate Student">
     <title>StudenHome</title>
 </head>
 
@@ -134,7 +136,7 @@
                                 <li>Lorem</li>
                                 <li>Lorem</li>
                             </ul>
-                            <a href="#" class="primary-btn">Choose plan</a>
+                            <a href="#" class="boton--basic">Choose plan</a>
                         </div>
                     </div>
 
@@ -151,7 +153,7 @@
                                 <li>Lorem</li>
                                 <li>Lorem</li>
                             </ul>
-                            <a href="#" class="primary-btn">Choose plan</a>
+                            <a href="#" class="boton--medium">Choose plan</a>
                         </div>
                     </div>
 
@@ -168,7 +170,7 @@
                                 <li>Lorem</li>
                                 <li>Lorem</li>
                             </ul>
-                            <a href="#" class="primary-btn">Choose plan</a>
+                            <a href="#" class="boton--premiun">Choose plan</a>
                         </div>
                     </div>
 
@@ -189,7 +191,7 @@
                                 <li>Lorem</li>
                                 <li>Lorem</li>
                             </ul>
-                            <a href="#" class="primary-btn">Choose plan</a>
+                            <a href="#" class="boton--basic">Choose plan</a>
                         </div>
                     </div>
 
@@ -206,7 +208,7 @@
                                 <li>Lorem</li>
                                 <li>Lorem</li>
                             </ul>
-                            <a href="#" class="primary-btn">Choose plan</a>
+                            <a href="#" class="boton--medium">Choose plan</a>
                         </div>
                     </div>
 
@@ -223,7 +225,7 @@
                                 <li>Lorem</li>
                                 <li>Lorem</li>
                             </ul>
-                            <a href="#" class="primary-btn">Choose plan</a>
+                            <a href="#" class="boton--premiun">Choose plan</a>
                         </div>
                     </div>
 
